--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "express": "^4.18.2",
     "node-fetch": "^2.6.7",
     "airtable": "^0.11.1",
-    "body-parser": "^1.20.2",
-    "path": "^0.12.7"
+    "body-parser": "^1.20.2"
   }
 }
