--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "server/app.js",
   "scripts": {
-    "start": "node server/app.js",
-    "build-client": "cd client && npm install && npm run build"
+    "start": "node server/app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
